debugging isi data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -52,6 +52,21 @@
   timestamp = {2017.06.15},
 }
 
+@Article{Almendral2010,
+  author        = {Almendral, J. A. and Leyva, I. and Li, D. and Sendiña–Nadal, I. and Havlin, S. and Boccaletti, S.},
+  title         = {Dynamics of overlapping structures in modular networks},
+  journal       = {Physical Review E},
+  year          = {2010},
+  volume        = {82},
+  number        = {1},
+  pages         = {016115},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1103/PhysRevE.82.016115},
+  file          = {:Dynamics of overlapping structures in modular networks.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.22},
+}
+
 @InProceedings{Amelio2013,
   author    = {Amelio, A. and Pizzuti, C.},
   title     = {Community Mining in Signed Networks: A Multiobjective Approach},
@@ -585,6 +600,20 @@
   file      = {:Overlapping community detection in networks with positive and negative links.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2014.04.01},
+}
+
+@Article{Chen2014o,
+  author    = {Chen, J.-R. and Hong, Z.-M. and Wang, L.-N. and Wu, L.},
+  title     = {Dynamic evolutionary community detection algorithms based on the modularity matrix},
+  journal   = {Chinese Physics B},
+  year      = {2014},
+  volume    = {23},
+  number    = {11},
+  pages     = {118903},
+  doi       = {10.1088/1674-1056/23/11/118903},
+  file      = {:Dynamic evolutionary community detection algorithms based on the modularity matrix.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2014.10.06},
 }
 
 @Article{Chen2014r,
@@ -1924,7 +1953,7 @@
 @InProceedings{Khadivi2010a,
   author    = {Khadivi, A. and Rad, A. A. and Hasler, M.},
   title     = {Community detection enhancement in networks using proper weighting and partial synchronization},
-  booktitle = {International Symposium on Circuits and Systems},
+  booktitle = {IEEE International Symposium on Circuits and Systems},
   year      = {2010},
   pages     = {3777-3780},
   doi       = {10.1109/ISCAS.2010.5537733},
@@ -2402,6 +2431,20 @@
   timestamp     = {2017.05.11},
 }
 
+@Article{Lu2010,
+  author    = {Lü, L. and Zhou, T.},
+  title     = {Link Prediction in Complex Networks: A Survey},
+  journal   = {Physica A},
+  year      = {2011},
+  volume    = {390},
+  number    = {6},
+  pages     = {1150-1170},
+  doi       = {10.1016/j.physa.2010.11.027},
+  file      = {:Link Prediction in Complex Networks- A Survey.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2010.10.11},
+}
+
 @InProceedings{Lu2013,
   author    = {Lu, Z. and Wen, Y. and Cao, G.},
   title     = {Community Detection in Weighted Networks: Algorithms and Applications},
@@ -2739,6 +2782,20 @@
   file      = {:Community Detection in Signed Networks Based on Extended Signed Modularity.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.03.04},
+}
+
+@Article{Murtagh1983,
+  author    = {Murtagh, F.},
+  title     = {A survey of recent advances in hierarchical clustering algorithms},
+  journal   = {Computer Journal},
+  year      = {1983},
+  volume    = {26},
+  number    = {4},
+  pages     = {354-359},
+  doi       = {10.1093/comjnl/26.4.354},
+  file      = {: survey of recent advances in hierarchical clustering algorithms.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
 }
 
 @Article{Neal2014,
@@ -3555,6 +3612,18 @@
   timestamp = {2016.03.03},
 }
 
+@InProceedings{Tang2012c,
+  author    = {Tang, J. and Lou, T. and Kleinberg, J.},
+  title     = {Inferring social ties across heterogenous networks},
+  booktitle = {5th ACM international conference on Web search and data mining},
+  year      = {2012},
+  pages     = {743-752},
+  doi       = {10.1145/2124295.2124382},
+  file      = {:Inferring social ties across heterogenous networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
+}
+
 @Article{Tang2015a,
   author    = {Tang, J. and Chang, Y. and Aggarwal, C. and Liu, H.},
   title     = {A Survey of Signed Network Mining in Social Media},
@@ -3869,6 +3938,19 @@
   timestamp     = {2017.06.21},
 }
 
+@Article{Wu2014b,
+  author    = {Wu, J. and Jiao, Y.},
+  title     = {Clustering dynamics of complex discrete-time networks and its application in community detection},
+  journal   = {Chaos},
+  year      = {2014},
+  volume    = {24},
+  pages     = {033104},
+  doi       = {10.1063/1.4886695},
+  file      = {:Clustering dynamics of complex discrete-time networks and its application in community detection.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2014.07.09},
+}
+
 @InProceedings{Wu2014j,
   author    = {Wu, L. and Wu, X. and Lu, A. and Li, Y.},
   title     = {On spectral analysis of signed and dispute graphs},
@@ -3879,6 +3961,19 @@
   file      = {:On spectral analysis of signed and dispute graphs.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.06.03},
+}
+
+@Article{Wu2015b,
+  author    = {Wu, J. and Hou, Y. and Jiao, Y. and Li, Y. and Li, X. and Jiao, L.},
+  title     = {Density shrinking algorithm for community detection with path based similarity},
+  journal   = {Physica A},
+  year      = {2015},
+  volume    = {433},
+  pages     = {218-228},
+  doi       = {10.1016/j.physa.2015.03.044},
+  file      = {:Density shrinking algorithm for community detection with path based similarity.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2015.04.04},
 }
 
 @Article{Wu2015f,
@@ -3892,6 +3987,20 @@
   file      = {:Partition signed social networks via clustering dynamics.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2015.10.13},
+}
+
+@Article{Xiang2015b,
+  author    = {Xiang, J. and Hu, K. and Zhang, Y. and Hu, T. and Li, J.-M.},
+  title     = {Analysis and perturbation of degree correlation in complex networks},
+  journal   = {Europhysics Letters},
+  year      = {2015},
+  volume    = {111},
+  number    = {4},
+  pages     = {48003},
+  doi       = {10.1209/0295-5075/111/48003},
+  file      = {:Analysis and perturbation of degree correlation in complex networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
 }
 
 @InProceedings{Xue2014,
@@ -4154,6 +4263,19 @@
   url           = {http://arxiv.org/abs/1609.01384},
 }
 
+@Article{Zhan2017a,
+  author        = {Zhan, J. and Li, X.},
+  title         = {Cluster Consensus in Networks of Agents With Weighted Cooperative-Competitive Interactions},
+  journal       = {IEEE Transactions on Circuits and Systems II: Express Briefs},
+  year          = {2017},
+  volume        = {in press},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/TCSII.2017.2713526},
+  file          = {:Cluster Consensus in Networks of Agents With Weighted Cooperative-Competitive Interactions.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.18},
+}
+
 @InProceedings{Zhang2010g,
   author        = {Zhang, K. and Lo, D. and Lim, E.-P.},
   title         = {Mining antagonistic communities from social networks},
@@ -4196,6 +4318,20 @@
   file      = {:Characterization and edge sign prediction in signed networks.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.06.09},
+}
+
+@Article{Zhang2014w,
+  author    = {Zhang, L.-S. and Gu, W.-F. and Hu, G. and Mi, Y.-Y.},
+  title     = {Network dynamics and its relationships to topology and coupling structure in excitable complex networks},
+  journal   = {Chinese Physics B},
+  year      = {2014},
+  volume    = {23},
+  number    = {10},
+  pages     = {108902},
+  doi       = {10.1088/1674-1056/23/10/108902},
+  file      = {:Network dynamics and its relationships to topology and coupling structure in excitable complex networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.22},
 }
 
 @Article{Zhao2017a,
@@ -4246,15 +4382,15 @@
 
 @Comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
-1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
+1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014o\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Wu2014b\;Wu2015b\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 1 ExplicitGroup:Datasets\;0\;Adamic2005\;Bales1970\;Biswal2010\;Brandes2010\;Costanzo2001\;Ghosn2004\;Hogg2008\;Krebs2002\;Kunegis2013a\;Lemann1952\;Leskovec2010d\;Leskovec2014\;Lusseau2003a\;Maniu2011a\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Neal2014\;Newcomb1961\;Oda2004\;Oda2005\;Poole2011\;Salgado2006\;Sampson1968\;Shwed2010\;Tang2015b\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Yang2012g\;Zachary1977\;;
-1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Antal2006\;Belardo2014\;Belardo2016\;Belaza2017\;Chen2017d\;Chiang2014\;Cohen1960\;Costantini2014\;Doreian2004\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Ludwig2009\;Marvel2011\;Molloy1995\;Moscato1989\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
+1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Almendral2010\;Antal2006\;Belardo2014\;Belardo2016\;Belaza2017\;Chen2017d\;Chiang2014\;Cohen1960\;Costantini2014\;DeParle2005\;Doreian2004\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Lu2010\;Ludwig2009\;Marvel2011\;Molloy1995\;Moscato1989\;Murtagh1983\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Tang2012c\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Xiang2015b\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;Zhang2014w\;;
 1 ExplicitGroup:Just balance\;0\;Akiyama1981\;Antal2005\;Beigi2016\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;Easley2010a\;ElMaftouhi2012\;Facchetti2012\;Harary1953\;Harary1955\;Harary1960\;Harary1968\;Harary1979\;Harary1980\;Heider1944\;Heider1946\;Inohara2002\;Inohara2002a\;Khanafiah2004\;Kulakowski2007\;Leskovec2010b\;Maayan2008\;Marvel2009\;Norman1972\;Rijt2011\;Schwartz2010\;Srinivasan2011\;Szella2010\;Taylor1967\;Teixeira2017\;Tomescu1973\;Zheng2015b\;;
 1 ExplicitGroup:_Biblionet\;2\;;
-2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
+2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Li2017c\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
 2 ExplicitGroup:Found\;0\;Ahmadizadeh2017\;Amelio2013\;Amelio2016\;Anchuri2012\;Bonacich2004\;Bruggeman2012\;Brusco2010\;Brusco2010a\;Cai2014b\;Cai2015b\;Chang2012b\;Chang2013b\;Chen2014e\;Chen2015h\;Chen2015i\;Chiang2014\;Demaine2006\;Doreian1996\;Doreian2008\;Doreian2009\;Doreian2013\;Drummond2013\;Esmailian2014\;Esmailian2015\;Facchetti2011\;Fang2016\;Figueiredo2013\;GalOnHarel2015\;Gao2015\;Gawronski2015\;Giotis2006\;Gomez2009\;Gong2013b\;Granell2011a\;Hou2005\;Iacono2010\;Jensen2006\;Jiang2015\;Levorato2015\;Li2013g\;Li2015o\;Liu2014d\;Lo2013\;Macon2012\;Mrvar2009\;Mucha2010\;Mucha2010a\;Neda2006\;Qi2016\;Rubinov2011\;Shahriari2015a\;Sharma2009\;Sharma2012a\;Shen2011a\;Sun2014g\;Terzi2011\;Traag2009\;Wu2011g\;Wu2015f\;Yang2006b\;Yang2007\;Yang2007c\;Zeng2015\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 2 ExplicitGroup:Not Found\;0\;Anchuri2011\;Aref2016\;Bogdanov2010\;Chang2017\;Chen2014r\;Chen2017a\;Chen2017b\;Chiang2012\;Cucuringu2013\;Doreian2005\;Gallier2015\;Guo2015c\;Harary1980\;Hassan2012a\;Hsieh2012\;Hu2017\;Kaplan2008\;Kunegis2010\;Kunegis2015a\;Li2010f\;Li2016r\;Li2016s\;Lo2011\;Ma2014d\;Murata2017\;Qi2017\;Santamaria2015\;Sedoc2016\;Shahriari2016a\;Sharma2015\;Shen2013g\;Traag2014\;Wahid2017\;Wu2012f\;Xue2014\;Yan2014\;Yang2015f\;Zaslavsky2010\;Zhang2010g\;;
-2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Cartwright1956\;Chakraborty2014\;Chen2017d\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Molloy1995\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Richardson2009\;Roethlisberger1939\;Rosvall2008\;Salgado2006\;Sampson1968\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Wu2012\;Yang2012g\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
+2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Almendral2010\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Cartwright1956\;Chakraborty2014\;Chen2014o\;Chen2017d\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;DeParle2005\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;He-Li2015\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2010\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Molloy1995\;Moscato1989\;Murtagh1983\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Resendel2005\;Richardson2009\;Rijt2011\;Roethlisberger1939\;Rosvall2008\;Rovira-Asenjo2013\;Salgado2006\;Sampson1968\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2012c\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;Uitermark2012\;VanEssen2012\;Viswanath2009\;Voeten2013\;Wang2013t\;West2014\;William2010\;Wu2012\;Wu2012g\;Wu2014b\;Wu2015b\;Xiang2015b\;Yang2012g\;Yap2015\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhan2017a\;Zhang2013s\;Zhang2014w\;;
 }
 
 @Comment{jabref-meta: groupsversion:3;}
